@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.999375-46
-Date: 2010-12-12
+Version: 0.999375-47
+Date: 2010-..-..
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
